<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="MPUAbort">"Abort"</string>
<string name="MPURetry">"Retry"</string>
<string name="MPUSendReceipt">"Send Receipt"</string>
<string name="MPUResendReceipt">"Resend Receipt"</string>
<string name="MPUClose">"Close"</string>
<string name="MPUPaymentSuccessful">"Payment successful."</string>
<string name="MPURefunded">"Refunded"</string>
<string name="MPUDeclined">"Declined"</string>
<string name="MPUAborted">"Aborted"</string>
<string name="MPUPreauthorized">"Pre-Authorized"</string>
<string name="MPUTotal">"Total"</string>
<string name="MPUSale">"Sale"</string>
<string name="MPUUnknown">"Unknown"</string>
<string name="MPURefundApproved">"Refund successful."</string>
<string name="MPURefundDeclined">"Refund declined."</string>
<string name="MPURefundAborted">"Refund aborted."</string>
<string name="MPURefundPayment">"Refund payment"</string>
<string name="MPUCapturePayment">"Capture payment"</string>
<string name="MPURefundPrompt">"Are you sure that you want to refund this payment?"</string>
<string name="MPUCapturePrompt">"Are you sure that you want to capture this payment?"</string>
<string name="MPUTransactionTypeSale">"Sale"</string>
<string name="MPUTransactionTypeRefund">"Refund"</string>
<string name="MPUTransactionTypePreauthorization">"Pre-Authorization"</string>
<string name="MPURefund">"Refund"</string>
<string name="MPUCapture">"Capture"</string>
<string name="MPUSummary">"Summary"</string>
<string name="MPUInvalidEmailAddress">"Invalid email address"</string>
<string name="MPUEnterValidEmailAddress">"Please enter a valid email address."</string>
<string name="MPUOK">"OK"</string>
<string name="MPUCouldNotSendReceipt">"Cannot send receipt"</string>
<string name="MPUPleaseTryAgain">"Please try again."</string>
<string name="MPUSelectAccount">"Select account"</string>
<string name="MPUEnterEmailAddress">"Enter email address"</string>
<string name="MPUSend">"Send"</string>
<string name="MPUResend">"Resend"</string>
<string name="MPUContinue">"Continue"</string>
<string name="MPUBackButtonDisabled">"The back button is disabled during the checkout. Please use the buttons above."</string>
<string name="MPUSignatureStatusLine">"I agree to pay the amount of %1$s."</string>
<string name="MPUError">"Error"</string>
<string name="MPUReceiptSent">"Receipt sent."</string>
<string name="MPUFetching">"Fetching Transaction"</string>
<string name="MPULoading">"Loading..."</string>
<string name="MPUVersion">"Version"</string>
<string name="MPULoggedInAs">"Logged in as"</string>
<string name="MPULogout">"Logout"</string>
<string name="MPUHelp">"Help"</string>
<string name="MPUForgot">"Forgot password?"</string>
<string name="MPULogin">"Sign In"</string>
<string name="MPUEmail">"Email"</string>
<string name="MPUEmailAddress">"Email Address"</string>
<string name="MPUPassword">"Password"</string>
<string name="MPURequired">"required"</string>
<string name="MPUWrongCredentials">"You entered a wrong password or no account exists for your email address."</string>
<string name="MPUUnknownUsername">"No account exists for this email address."</string>
<string name="MPUBack">"Back"</string>
<string name="MPUPasswordReset">"We\'ve sent you an email. Please check it for further instructions."</string>
<string name="MPURequestPassword">"Reset Password"</string>
<string name="MPUActions">"Actions"</string>
<string name="MPUSettings">"Settings"</string>
<string name="MPUInfo">"Info"</string>
<string name="MPUVisa">"Visa"</string>
<string name="MPUMastercard">"Mastercard"</string>
<string name="MPUMaestro">"Maestro"</string>
<string name="MPUAmericanExpress">"American Express"</string>
<string name="MPUReprint">"Reprint"</string>
<string name="MPUPrinting">"Printing..."</string>
<string name="MPUPrint">"Print"</string>
<string name="MPUPartiallyCaptured">"of Pre-Authorization for %1$s"</string>
</resources>