<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ mpos-ui : http://www.payworksmobile.com
  ~
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2015 payworks GmbH
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/mpu_activity_vertical_margin_half"
        android:paddingLeft="@dimen/mpu_activity_horizontal_margin_half"
        android:paddingRight="@dimen/mpu_activity_horizontal_margin_half"
        android:paddingTop="@dimen/mpu_activity_vertical_margin_half">


        <ImageView
            android:id="@+id/mpu_logo_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:paddingBottom="@dimen/mpu_content_padding"
            android:paddingTop="@dimen/mpu_content_padding"/>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mpu_logo_image">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mpu_content_padding"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/mpu_email_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center"
                    android:hint="@string/MPUEmail"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="18sp"/>


                <EditText
                    android:id="@+id/mpu_password_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center"
                    android:layout_marginTop="@dimen/mpu_content_padding"
                    android:hint="@string/MPUPassword"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"/>

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/mpu_content_padding"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/mpu_forgot_password_button"
                        style="@style/mpos.ui.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="@string/MPUForgot"/>

                    <Button
                        android:id="@+id/mpu_action_button"
                        style="@style/mpos.ui.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:enabled="false"
                        android:text="@string/MPULogin"/>
                </FrameLayout>
            </LinearLayout>

            <ProgressBar
                android:id="@+id/mpu_login_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:visibility="gone"/>
        </FrameLayout>
    </RelativeLayout>
</ScrollView>